--- a/index.html
+++ b/index.html
@@ -12,11 +12,23 @@
 </head>
 <body>
 
-  <div class="main-container">
+  <section class="cards-container">
+    <div class="main-container">
+        <div class="img-container"></div>
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+    <div class="main-container">
+        <div class="img-container"></div>
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+    <div class="main-container">
       <div class="img-container"></div>
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>  
+    </div>
+  </section>
 
 <footer class="footer">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
